src/test/deca/context/valid/created/decl_class/redefinition_field.deca
// Description :
//    redéfinition d'un champ et d'une methode
// Resultats :
//		Ok

class C{
int x = 2;
}

class B extends C{
float x = 0.5;
}
class A extends B{
boolean x =true;
}
{
A a = new A();
C c = new C();
B b = new B();

boolean j = a.x;
float f = c.x;
int i = b.x;
}